--- a/config/locales/de_rest.yml
+++ b/config/locales/de_rest.yml
@@ -4,41 +4,41 @@ de:
     short: Aktivitäten
     swim:
       short: Schwimmen im sauberen Seen
-      rest:  In fussnähe befinden sich mehrere Bademöglichkeiten. Die näheste See, Isosimmi, ist etwa 200m 
+      rest:  In Fussnähe befinden sich mehrere Bademöglichkeiten. Der näheste See, Isosimmi, ist etwa 200m 
         entfernt. Mehrere Seen haben Sandstrand und können per Fahrrad (kostenlos) erreicht werden.
     forest:
       short: Sparziergang im Naturschutzgebiet.
       rest: Das Natrschutzgebiet um den Isosimmmi See fängt eine hundert Meter von unserem Haus entfernt an und
-            ersteckt sich über mehrere Kilometer. Auch grössere Excursionen können per Fahrrad unternommen werden
+            ersteckt sich über mehrere Kilometer. Grössere Excursionen können per Fahrrad unternommen werden
             die kostenlos von Villa Taika geliehen werden können.
     row:
-      short: Rudern und/oder Fischen, Zeit zum entspannen
+      short: Rudern, Fischen, Zeit zum entspannen
       rest: Ein Ruderboot kann für eine kleine Gebühr geliehen werden. Damit lässt sich auf dem Nah delegenen 
-            See fischen, oder auf eine entspannte Tour gehen. Für gruppen könne auch Lanutours arrangiert werden.
+            See fischen, oder auf eine entspannte Tour gehen. Für Gruppen können auch Kanutours arrangiert werden.
     garden:
       short: Enspannen und Ruhe
-      rest: Wir haben einen grossen und mit Liebe angelegten garten der zum Entspannen einläd. Mehrer 
-            Sitzgelegenheiten laden ein, und das geplätscher des Wasserfalls lillt und entspannt.
+      rest: Wir haben einen grossen und mit Liebe angelegten Garten der zum Entspannen einläd. Mehrer 
+            Sitzgelegenheiten laden ein, und das geplätscher des Wasserfalls lullt und entspannt.
     fiskars:
-      short: Fiskars & Bilnas dörfer
+      short: Fiskars & Bilnas Dörfer
       rest: Das liebevoll restaurierten Handwerks- zentrum Fiskars ist nur eine kurze Fahrt entfernt, 
-          und bietet lokales Handwerk nicht nur zum Kauf, aber auch dirkt zum angucken. Mehrer Workshops 
-          sind zur besichtigung offen. 
-          Bilnas ist ebenfalls eine Altes Eisenwerk-Dorf und befindet sich knapp über 10 Minuten entfernt.
+          und bietet lokales Handwerk zum Kauf, und mehrer Workshops 
+          sind zur Besichtigung offen. 
+          Bilnas ist ebenfalls eine altes Eisenwerk und befindet sich knapp über 10 Minuten entfernt.
     hanko:
       short: Tammisaari und Hanko, alte Städte
       rest: Tammisaari und Hanko sind beide schöne alte Städte am Meer. Mit vielen alten Holzhäusern und schönen
             Fussgängerzonen sind sie ideal für Tagesreisen.
     raasepori:
       short: Raasepori und Mustio
-      rest: Das alte Schloss von Raasepori, eines der ältesten in Finnland, giebt der Region den Namen. Es befindet 
-            sich etwa eine halbe Sunde entfent. 
-            Das alte Manorhaus in Mustio ist auch sehr nah und lädt mit seinen grossen Gärten und Cafees zum weilen ein.
+      rest: Das alte Schloss von Raasepori, eines der ältesten in Finnland, giebt der Region den Namen und befindet 
+            sich nur etwa eine halbe Sunde entfent. 
+            Das alte Herrenhaus in Mustio ist auch sehr nah und lädt mit seinen grossen Gärten zum weilen ein.
     groups:
       short: Gruppenaktivitäten.
-      rest: Unser <a href="http://www.kdadventure.com/fi/activities/kursseja/">Nachbar</a>, arraangiert für 
-            Gruppen eine Anzahl von Aktivitäten. Zum Beispiel Kano-trips, Kohlen-Laufen, Themen-abende und
-            Wildernis-Kurse.
+      rest: Unser <a href="http://www.kdadventure.com/fi/activities/kursseja/">Nachbar</a>, arrangiert für 
+            Gruppen eine Anzahl von Aktivitäten. Zum Beispiel Kanutrips, Kohlenlaufen, Themenabende und
+            Wilderniskurse.
   booking:
     short: Buchung
     received: Ihre Buchung wurde empfangen.
@@ -58,9 +58,9 @@ de:
     call: Anruf
     confirmation: Die Buchung wird innerhalb eines Arbeitstages bestätigt.
     pay:  |
-        Sie könnnen nach der Bestätigung per Überweisung bezahlen: Kontonummer Nordea 101435-136318 <br/> 
-            Ansonsten können Sie bei Ankunft in Bar bezahlen.<br/> 
-          Bei Buchungen von zwei oder mehr Nächten ist eine Anzahlung von 25% zur Buuchungsbestätigung fällig.
+           Sie könnnen nach der Bestätigung per Überweisung bezahlen: Kontonummer Nordea 101435-136318 <br/> 
+           Ansonsten können Sie bei Ankunft in Bar bezahlen.<br/> 
+           Bei Buchungen von zwei oder mehr Nächten ist eine Anzahlung von 25% zur Buchungsbestätigung fällig.
     pay_button: Bezahlen 
     submit: Buchen
     payson:  Alernativ können Sie einen der Payson Buttons um bezahlen benutzen, oder auch über PayPal and unsere
@@ -82,16 +82,16 @@ de:
     bottom: |-
       Unser Saal ist auf schöne Weise eingerichtet und gross genug für viele Aktivitäten, zb Yoga, Tanzen,
       Körperarbeit oder andere Gruppenarbeit. <br/>
-      Der  Garten ist gross und offen und eignet sich gut für ruhge Aktivitäten wir Yoga oder Meditation, 
+      Der  Garten ist gross und offen und eignet sich gut für ruihge Aktivitäten wir Yoga oder Meditation, 
       und bietet auch genug Sitzmöglichkeiten (auch bedacht) für Gruppen. <br/>
-      Der Saal ist ausgerüstet mit einem Hochqualitativen Audio System, und auch ein Videoprojektor ist 
+      Der Saal ist ausgerüstet mit einem hochqualitativen Audio System, und auch ein Videoprojektor ist 
       vorhanden. <br/>
-      Für ruhige Arbeit und/oder Pausen stehen Decken und Kissen zur Verfügung. <br/>
+      Für ruhige Arbeit oder Pausen stehen Decken und Kissen zur Verfügung. <br/>
       Die Sauna ist auch für grösserer Gruppen geeignet und zum abkühlen haben wir einen kleinen Pool. <br/>
       In den 8 Zimmern können bequem 20 und mit Extra-Betten bis zu 30 Personen übernachten.<br/>
       Zusätzlich zu den lokalen Resaurants bieten wir auch vegetarisches Essem im Haus an. <br/>
       Preise sind von vielen Faktoren abhängig, bitte setzen Sie sich mit uns in Verbindung um ein geeignetes
-      Packet zu schnüren. Speziell abhängig von Gruppengrösse, Jahreszeit und Mahlzeiten sind Peise zwischen 50 
+      Paket zu schnüren. Speziell abhängig von Gruppengrösse, Jahreszeit und Mahlzeiten sind Peise zwischen 50 
       bis 65 pro Person und Tag für Vollpension mit Saalbenutzung üblich. <br/> <br/>
   map: 
     short: Karte
@@ -104,7 +104,7 @@ de:
     all: deco , eco
     short: Neues
     deco: 
-        short: Erschwingliche Unterkunft  im renovierten Blockhaus
+        short: Rustikale Unterkunft im renovierten Blockhaus
         rest: Wir haben Teil des Hofgebebäudes renoviert und ein schönes Blockhaus - Zimmer mit Himmelbett
               ausgestattet. Das einfache aber bezaubernde Zimmer kostet 65€ für zwei Personen. <br/>
               Toilette und Dusche befinden sich im Hautgebäude.
@@ -126,7 +126,7 @@ de:
     w_frogs: Tanzende Frösche
     w_peony: Brunnen im Garten
     w_terasse: Terasse im Garten
-    h_aurinko_wc: Sonnen-Suite
-    h_curves: Sonnen-Suite
+    h_aurinko_wc: Sonnen Suite
+    h_curves: Sonnen Suite
     h_lootus_wc: Lotus suite 
     h_highview: Villa Taika von hoch oben
