--- a/config/locales/de_rest.yml
+++ b/config/locales/de_rest.yml
@@ -4,12 +4,12 @@ de:
     short: Aktivitäten
     swim:
       short: Schwimmen im sauberen Seen
-      rest:  In Fussnähe befinden sich mehrere Bademöglichkeiten. Der näheste See, Isosimmi, ist etwa 200m 
+      rest:  In Fussnähe befinden sich mehrere Bademöglichkeiten. Der näheste See, Iso–Simi, ist etwa 200m 
         entfernt. Mehrere Seen haben Sandstrand und können per Fahrrad (kostenlos) erreicht werden.
     forest:
       short: Sparziergang im Naturschutzgebiet.
-      rest: Das Natrschutzgebiet um den Isosimmmi See fängt eine hundert Meter von unserem Haus entfernt an und
-            ersteckt sich über mehrere Kilometer. Grössere Excursionen können per Fahrrad unternommen werden
+      rest: Das Natrschutzgebiet um den Isosimi See fängt eine hundert Meter von unserem Haus entfernt an und
+            ersteckt sich über mehrere Kilometer. Grössere Excursionen können unternommen werden per Fahrrad,
             die kostenlos von Villa Taika geliehen werden können.
     row:
       short: Rudern, Fischen, Zeit zum entspannen
@@ -17,26 +17,24 @@ de:
             See fischen, oder auf eine entspannte Tour gehen. Für Gruppen können auch Kanutours arrangiert werden.
     garden:
       short: Enspannen und Ruhe
-      rest: Wir haben einen grossen und mit Liebe angelegten Garten der zum Entspannen einläd. Mehrer 
+      rest: Wir haben einen grossen und mit Liebe angelegten Garten der zum Entspannen einlädt. Mehrere 
             Sitzgelegenheiten laden ein, und das geplätscher des Wasserfalls lullt und entspannt.
     fiskars:
-      short: Fiskars & Bilnas Dörfer
-      rest: Das liebevoll restaurierten Handwerks- zentrum Fiskars ist nur eine kurze Fahrt entfernt, 
+      short: Fiskars & Billnäs Dörfer
+      rest: Das liebevoll restaurierten Handwerks-zentrum Fiskars ist nur eine kurze Fahrt entfernt, 
           und bietet lokales Handwerk zum Kauf, und mehrer Workshops 
           sind zur Besichtigung offen. 
-          Bilnas ist ebenfalls eine altes Eisenwerk und befindet sich knapp über 10 Minuten entfernt.
+          Billnäs ist ebenfalls eine altes Eisenwerk und befindet sich knapp über 10 Minuten entfernt.
     hanko:
       short: Tammisaari und Hanko, alte Städte
-      rest: Tammisaari und Hanko sind beide schöne alte Städte am Meer. Mit vielen alten Holzhäusern und schönen
-            Fussgängerzonen sind sie ideal für Tagesreisen.
+      rest: Tammisaari und Hanko sind beide schöne alte Städte am Meer. Mit vielen alten Holzhäusern und schönen Fussgängerzonen sind sie ideal für Tagesreisen.
     raasepori:
       short: Raasepori und Mustio
-      rest: Das alte Schloss von Raasepori, eines der ältesten in Finnland, giebt der Region den Namen und befindet 
-            sich nur etwa eine halbe Sunde entfent. 
+      rest: Das alte Schloss von Raasepori, eines der ältesten in Finnland, gibt der Region den Namen und befindet sich nur etwa eine halbe Stunde entfent. 
             Das alte Herrenhaus in Mustio ist auch sehr nah und lädt mit seinen grossen Gärten zum weilen ein.
     groups:
-      short: Gruppenaktivitäten.
-      rest: Unser <a href="http://www.kdadventure.com/fi/activities/kursseja/">Nachbar</a>, arrangiert für 
+      short: Gruppenaktivitäten
+      rest: Unser <a href="http://www.kdadventure.com/fi/activities/kursseja/">Nachbar</a> arrangiert für 
             Gruppen eine Anzahl von Aktivitäten. Zum Beispiel Kanutrips, Kohlenlaufen, Themenabende und
             Wilderniskurse.
   booking:
@@ -44,17 +42,16 @@ de:
     received: Ihre Buchung wurde empfangen.
     error: Bitte alle Felder ausfüllen, auch Email und Datum. 
     booking: Sie können per email buchen, das Formular ausfüllen, oder uns zwischen 10:00 and 19:00
-              unter  +358407046689 anrufen. <br/> <br/> 
-              Für das Formular werden alle Felder benötigt. Als Zimmer kann auch eine Kategorie angegeben werden
-              (also Suite/Deluxe,Standard). Alle Zimmer sind mit einem Doppelbett ausgestattet, bitte geben Sie
-              eventuell Extra-Betten im Komentar Feld an.
+              unter  +358 40 704 6689 anrufen. <br/> <br/> 
+              Für das Formular werden alle Felder benötigt. Als Zimmer kann auch eine Kategorie angegeben werden (also Suite / Deluxe / Standard). Alle Zimmer sind mit einem Doppelbett ausgestattet, bitte geben Sie
+              eventuell Extra-Betten im Kommentar Feld an.
     name: Vor und Nachname
     email: Email Addresse
     arrival: Ankunftsdatum
     phone: Telefon
     nights: Nächte
     room: Zimmer
-    comment: Komentar
+    comment: Kommentar
     call: Anruf
     confirmation: Die Buchung wird innerhalb eines Arbeitstages bestätigt.
     pay:  |
@@ -63,8 +60,7 @@ de:
            Bei Buchungen von zwei oder mehr Nächten ist eine Anzahlung von 25% zur Buchungsbestätigung fällig.
     pay_button: Bezahlen 
     submit: Buchen
-    payson:  Alernativ können Sie einen der Payson Buttons um bezahlen benutzen, oder auch über PayPal and unsere
-            email addresse überweisen.
+    payson:  Alernativ können Sie einen der Payson Buttons um bezahlen benutzen, oder auch über PayPal und unsere email addresse überweisen.
   groups: 
     short: Gruppen
     right: Villa Taika eignet sich gut für Kurse oder andere Gruppenaktivitäten.<br/><br/>
@@ -82,22 +78,21 @@ de:
     bottom: |-
       Unser Saal ist auf schöne Weise eingerichtet und gross genug für viele Aktivitäten, zb Yoga, Tanzen,
       Körperarbeit oder andere Gruppenarbeit. <br/>
-      Der  Garten ist gross und offen und eignet sich gut für ruihge Aktivitäten wir Yoga oder Meditation, 
+      Der Garten ist gross und offen. Er eignet sich gut für ruhige Aktivitäten wie Yoga oder Meditation, 
       und bietet auch genug Sitzmöglichkeiten (auch bedacht) für Gruppen. <br/>
       Der Saal ist ausgerüstet mit einem hochqualitativen Audio System, und auch ein Videoprojektor ist 
       vorhanden. <br/>
       Für ruhige Arbeit oder Pausen stehen Decken und Kissen zur Verfügung. <br/>
       Die Sauna ist auch für grösserer Gruppen geeignet und zum abkühlen haben wir einen kleinen Pool. <br/>
       In den 8 Zimmern können bequem 20 und mit Extra-Betten bis zu 30 Personen übernachten.<br/>
-      Zusätzlich zu den lokalen Resaurants bieten wir auch vegetarisches Essem im Haus an. <br/>
+      Zusätzlich zu den lokalen Restaurants bieten wir auch vegetarisches Essem im Haus an. <br/>
       Preise sind von vielen Faktoren abhängig, bitte setzen Sie sich mit uns in Verbindung um ein geeignetes
-      Paket zu schnüren. Speziell abhängig von Gruppengrösse, Jahreszeit und Mahlzeiten sind Peise zwischen 50 
-      bis 65 pro Person und Tag für Vollpension mit Saalbenutzung üblich. <br/> <br/>
+      Paket zu schnüren. Speziell abhängig von Gruppengrösse, Jahreszeit und Mahlzeiten sind Preise zwischen 50 bis 65 pro Person und Tag für Vollpension mit Saalbenutzung üblich. <br/> <br/>
   map: 
     short: Karte
     one:  <b>Villa Taika</b>  befindet sich in dem Dorf Antskog, 4km nördlich von Fiskars, ca 100km west von 
           Helsinki. 
-    two: Villa Taika ist ein grosses weisses Haus auf einem kleinen Hügel, direkt an der Stasse durch Antskog.
+    two: Villa Taika ist ein grosses weisses Haus auf einem kleinen Hügel, direkt an der Strasse durch Antskog.
     three: Von Fiskars kommend ist Villa Taika das <em>dritte</em> Haus auf der rechten Seite.
     four: Direkt vom Haus kann man zwei Seen sehen, und die Natur lädt zum Spazierengehen ein. 
   news: 
@@ -105,12 +100,12 @@ de:
     short: Neues
     deco: 
         short: Rustikale Unterkunft im renovierten Blockhaus
-        rest: Wir haben Teil des Hofgebebäudes renoviert und ein schönes Blockhaus - Zimmer mit Himmelbett
+        rest: Wir haben Teil des Hofgebebäudes renoviert und ein schönes Blockhaus-Zimmer mit Himmelbett
               ausgestattet. Das einfache aber bezaubernde Zimmer kostet 65€ für zwei Personen. <br/>
-              Toilette und Dusche befinden sich im Hautgebäude.
+              Toilette und Dusche befinden sich im Hauptgebäude.
         image: renovate
     eco: 
-      short: Ököenergie. 
+      short: Ököenergie
       rest: Villa Taika ist jetzt komplett auf erneuerbare Energie umgestiegen <br/>
             Zusätlich zu dem schon vor einigen Jahren installiertem Wasserführendem Kamin, haben wir 
             eine neuen Holzkessel installiert. Der moderne Holzvergaser glänzt mit einem Wirkungsgrad von bis 
