--- a/config/locales/de_rooms.yml
+++ b/config/locales/de_rooms.yml
@@ -8,21 +8,21 @@ de:
         und haben so unser einzigartiges B&B mit 8 individuell eingerichteten Zimmern kreiert. <br/> 
         Wir hoffen Sie werden neu belebt und gut geruht durch unsere wunderschöne Umgebung!<br/>
         
-        In der Nähe sind mehrere Sehenswürdigkeiten, so kann man leicht den Tag in Fiskars (5km), Bilnäs (15km),
-        Musto (15km), Tammisaari (35km) oder Hanko (65km) verbringen. Oder enspannen Sie sich einfach im 
-        liebevoll angelegten Gartem zum Pläzschern des Wasserfalles. <br/>
+        In der Nähe sind mehrere Sehenswürdigkeiten, so kann man leicht den Tag in Fiskars (5km), Billnäs (15km),
+        Mustio (15km), Tammisaari (35km) oder Hanko (65km) verbringen. Oder enspannen Sie sich einfach im 
+        liebevoll angelegten Garten zum Plätschern des Wasserfalles. <br/>
     two:
       Die Preise für ein Doppelzimmer sind zwischen 75 and 95€ für 2 Personen, aber mehrere Zimmer sind geräumig 
       genug für ein drittes oder sogar viertes Bett (25€). <br/>
-      Frühstück , zwischen 8:30-10:00, ist im Preis inbegriffen. <br/>
-      Check-in ist zwischen 14:00 - 19:00 und Check-out bis 12:00 wenn nicht anders vereinbart.  <br/>
-    suites: 3 suites mit Dusche und Toilette 85-95 €
+      Frühstück, zwischen 8:30–10:00, ist im Preis inbegriffen. <br/>
+      Check-in ist zwischen 14:00–19:00 und Check-out bis 12:00 wenn nicht anders vereinbart.  <br/>
+    suites: 3 suites mit Dusche und Toilette 85–95 €
     deluxe: 2 Zimmer mit eigener Toilette 75€
     standard: 2 Zimmer (teilen Dusche/Toilette) 75€
   tai: oder
   puh: Tel
   myos: Siehe auch
-  slogan: Asatische Eleganz
+  slogan: Asiatische Eleganz
   suites: 
     short: Suites (ensuite)
   deluxe: 
@@ -31,23 +31,23 @@ de:
     short: Standard 
   index:
     short: Home
-    bold: Asiatische Eleganz inmiten unberührter Natur.
+    bold: Asiatische Eleganz inmitten unberührter Natur.
     text:  ist ein charmantes Bed & Breakfast in Antskog, nahe Fiskars, knapp über eine Autostunde 
           von Helsinki entfernt. 
   green:
     short: Grünes Zimmer
     full: Das <b>Grüne Zimmer</b> hat eine ruhige Atmsphere und einen schönen Blick auf den Garten <br/>
           Zusätzlich zu dem vorhanden Doppelbett ist Platzt für eine Extra-Bett. Hinter den Dachwinkel passen
-          auch zwei Kinder die das "höhlengeühl" lieben.<br/>
+          auch zwei Kinder die das "höhlengefühl" lieben.<br/>
           Im Zimmer ist eine Toilette und eine Dusche wird mit dem Orangen Zimmer gemeinsam benutzt. <br/>
-          Grünes und Organges Zimmer zusammen sind ideal für Kleingruppen bis 7 Erwachsene, da Sie dann den 
+          Grünes und Oranges Zimmer zusammen sind ideal für Kleingruppen bis 7 Erwachsene, da Sie dann den 
           kleinen Vorraum und Dusche für sich haben. <br/>
           Der Preis für 2 ist 75€ / Einzelbelegung 60€
   orange:
     short: Oranges Zimmer
-    full: Das Orange Zimmer hat eine warme, gemütliche Atmosphäre mit asiatischem Touch.
+    full: Das <b>Orange Zimmer</b> hat eine warme, gemütliche Atmosphäre mit asiatischem Touch.
           Zusätzlich zu dem vorhanden Doppelbett ist Platzt für eine Extra-Bett. Hinter den Dachwinkel passen
-          auch zwei Kinder die das "höhlengeühl" lieben.<br/>
+          auch zwei Kinder die das "höhlengefühl" lieben.<br/>
           Das Zimmer hat aus dem ersten Stock einen schönen Blick auf den Garten und umliegende Natur.
           Im Zimmer ist eine Toilette und eine Dusche wird mit dem grünen Zimmer gemeinsam benutzt. <br>
           Grünes und Organges Zimmer zusammen sind ideal für Kleingruppen bis 7 Erwachsene, da Sie dann den 
@@ -58,15 +58,15 @@ de:
     full: Das <b>Rosenzimmer </b> ist ein gemütliches Zimmer mit romantischer Atmosphäre. <br/>
           Es verfügt über ein Doppelbett und ein gemütliches Sofa für zwei Personen. <br/>
           Die Dusche und Toilette befinden sich direkt nebenann und werden mit dem Blauen Zimmer geteilt. <br/>
-          Die benachbarten Rosen- und Blauen-zimmer bieten zusammen eine gute Einheit für kleine Gruppen oder 
+          Die benachbarten Rosen- und Blauen Zimmer bieten zusammen eine gute Einheit für kleine Gruppen oder 
           grosse Familien.<br/>
           Der Preis für 2 ist 75€ / Einzelbelegung 60€
   sky:
     short: Blaues Zimmer 
-    full: Das <b>Blaues Zimmer </b> hat eine ruhige, entspannende Atmosphäre. <br/>
-          Es teilt Dusche und Bad mit dem Rosenzimmer nebeann. Es befindet sich ein Doppelbett im Zimmer und es
+    full: Das <b>Blaue Zimmer </b> hat eine ruhige, entspannende Atmosphäre. <br/>
+          Es teilt Dusche und Bad mit dem Rosenzimmer nebenan. Es befindet sich ein Doppelbett im Zimmer und es
           ist ein Extrabett vorhanden.  <br/>
-          Die benachbarten Rosen- und Blauen-zimmer bieten zusammen eine gute Einheit für kleine Gruppen oder 
+          Die benachbarten Rosen- und Blauen Zimmer bieten zusammen eine gute Einheit für kleine Gruppen oder 
           grosse Familien.<br/>
           Der Preis für 2 ist 75€ / Einzelbelegung 60€
   lootus:
@@ -74,22 +74,22 @@ de:
     full:  Die <b>Lotus Suite</b> ist ein sehr geräumigiges Zimmer, eher Appartement, mit asiatischer Eleganz.<br/>
           Zusätzlich zum eigenen Badezimmer, Schlaf- und Vorraum, bietet Sie genug Platz für zwei Betten und dabei 
           noch genug Platz zum Sizen. Ausserdem ist eine <b> private Terasse </b> angeschlossen, 
-          auf der sich auch im Herbst noch die Morgensoonne geniessen lässt.<br/>
+          auf der sich auch im Herbst noch die Morgensonne geniessen lässt.<br/>
           Der Preis für 2 ist 95€.
   sun:
     short: Sonnen Suite 
     full: Die <b>Sonnen Suite</b> ist ein sehr elegantes und sonniges Zimmer. <br/>
-          Traditonelles englisches timber-framing giebt dem Raum einen rusikalen Hauch der die elegante 
+          Traditonelles englisches timber-framing gibt dem Raum einen rusikalen Hauch der die elegante 
           Atmosphäre mit Teakmöbeln kontrapunktiert.<br/>
           Die grossen süd-gerichteten Fenster und hohe Decke verleihen dem Zimmer ein leichtes, sonniges 
           Gefühl.<br/> 
           Dusche und Toilette sind ensuite und zusätlich zum Doppelbett ist Platz für ein Extra-Bett.<br/>
           Der Preis für 2 ist 90€ / Einzelbelegung 75€
   ametist:
-    short: Amethyst room
+    short: Amethyst Zimmer
     full: Das <b>Amethyst Zimmer</b> ist ein sonnig, helles Zimmer mit hand geschnitztem Relief. <br/>
-          Das Zimmer ist nach Süden gerichtet und durch die grossen Fenster entsteht eine sehr geraümges 
+          Das Zimmer ist nach Süden gerichtet und durch die grossen Fenster entsteht eine sehr geraümiges 
           Gefühl.<br/>
-          Eine eigene Dusche und Toilette befindet geht direkt von der eigenen kleinen Eingangshalle ab. <br/>
+          Eine eigene Dusche und Toilette geht direkt von der eigenen kleinen Eingangshalle ab. <br/>
           Der Preis für 2 ist 85€ / Einzelbelegung 70€
   
