--- a/config/locales/de_rest.yml
+++ b/config/locales/de_rest.yml
@@ -27,10 +27,12 @@ de:
           Billnäs ist ebenfalls eine altes Eisenwerk und befindet sich knapp über 10 Minuten entfernt.
     hanko:
       short: Tammisaari und Hanko, alte Städte
-      rest: Tammisaari und Hanko sind beide schöne alte Städte am Meer. Mit vielen alten Holzhäusern und schönen Fussgängerzonen sind sie ideal für Tagesreisen.
+      rest: Tammisaari und Hanko sind beide schöne alte Städte am Meer. Mit vielen alten Holzhäusern und schönen 
+            Fussgängerzonen sind sie ideal für Tagesreisen.
     raasepori:
       short: Raasepori und Mustio
-      rest: Das alte Schloss von Raasepori, eines der ältesten in Finnland, gibt der Region den Namen und befindet sich nur etwa eine halbe Stunde entfent. 
+      rest: Das alte Schloss von Raasepori, eines der ältesten in Finnland, gibt der Region den Namen und befindet 
+            sich nur etwa eine halbe Stunde entfent. 
             Das alte Herrenhaus in Mustio ist auch sehr nah und lädt mit seinen grossen Gärten zum weilen ein.
     groups:
       short: Gruppenaktivitäten
@@ -43,7 +45,8 @@ de:
     error: Bitte alle Felder ausfüllen, auch Email und Datum. 
     booking: Sie können per email buchen, das Formular ausfüllen, oder uns zwischen 10:00 and 19:00
               unter  +358 40 704 6689 anrufen. <br/> <br/> 
-              Für das Formular werden alle Felder benötigt. Als Zimmer kann auch eine Kategorie angegeben werden (also Suite / Deluxe / Standard). Alle Zimmer sind mit einem Doppelbett ausgestattet, bitte geben Sie
+              Für das Formular werden alle Felder benötigt. Als Zimmer kann auch eine Kategorie angegeben werden 
+              (also Suite / Deluxe / Standard). Alle Zimmer sind mit einem Doppelbett ausgestattet, bitte geben Sie
               eventuelle Extra-Betten im Kommentar Feld an.
     name: Vor und Nachname
     email: Email Addresse
@@ -61,7 +64,8 @@ de:
            Ansonsten können Sie bei Ankunft in Bar bezahlen.<br/> 
     pay_button: Bezahlen 
     submit: Buchen
-    payson:  Alernativ können Sie einen der Payson Buttons um bezahlen benutzen, oder auch über PayPal und unsere email addresse überweisen.
+    payson:  Alernativ können Sie einen der Payson Buttons um bezahlen benutzen, oder auch über PayPal und unsere 
+            email addresse überweisen.
   groups: 
     short: Gruppen
     right: Villa Taika eignet sich gut für Kurse oder andere Gruppenaktivitäten.<br/><br/>
@@ -88,7 +92,8 @@ de:
       In den 8 Zimmern können bequem 20 und mit Extra-Betten bis zu 30 Personen übernachten.<br/>
       Zusätzlich zu den lokalen Restaurants bieten wir auch vegetarisches Essem im Haus an. <br/>
       Preise sind von vielen Faktoren abhängig, bitte setzen Sie sich mit uns in Verbindung um ein geeignetes
-      Paket zu schnüren. Speziell abhängig von Gruppengrösse, Jahreszeit und Mahlzeiten sind Preise zwischen 50 bis 65 pro Person und Tag für Vollpension mit Saalbenutzung üblich. <br/> <br/>
+      Paket zu schnüren. Speziell abhängig von Gruppengrösse, Jahreszeit und Mahlzeiten sind Preise zwischen 50 bis 
+      75 pro Person und Tag für Vollpension mit Saalbenutzung üblich. <br/> <br/>
   map: 
     short: Karte
     one:  <b>Villa Taika</b>  befindet sich in dem Dorf Antskog, 4km nördlich von Fiskars, ca 100km west von 
