--- a/config/locales/fi_rest.yml
+++ b/config/locales/fi_rest.yml
@@ -67,6 +67,7 @@ fi:
                   Payson palveluun pääset alla olevaa Payson tunnusta klikkaamalla:<br/>
   groups: 
     short: Ryhmille
+    link: 
     right: 
            <ul> 
             <li> iso ryhmätila</li>
@@ -86,11 +87,17 @@ fi:
           Tarjoamme täysipainoista kasvisruokaa, joka on valmistettu rakkaudella..<br/>
           Pihamme on iso ja avoin. Sitä voi käyttää hiljaisiin ryhmäharjoituksiin.<br/>
           Kurssin aikana on mahdollista saunoa puulämmitteisessä saunassamme.<br/>
-          Hinnasta ja yksityiskohdista voimme neuvotella. Täysihoito on 50-65€, riippuen ryhmän koosta ja ruokatoiveista.<br/>
+          Hinnasta ja yksityiskohdista voimme neuvotella. Täysihoito on 50-75€, riippuen ryhmän koosta ja ruokatoiveista.<br/>
     
           Talomme sijaitsee erittäin luonnonkauniissa ympäristössä. 
-          Kävelymatkan päässä on 5 eri järveä ja luonnonsuojelualue. 
+          Kävelymatkan päässä on 5 eri järveä ja luonnonsuojelualue. <br/>
           Ota yhteyttä!
+
+          </div>
+          <div class="left">
+            <br/>
+            <a href="groups_extra.html"> Hinnat ja lisätieto </a>
+
   map: 
     short: Kartta
     one: Villa Taika  sijaitsee Antskogissa 4km Fiskarsista  Karjalohjalle päin.
