--- a/config/locales/de_rooms.yml
+++ b/config/locales/de_rooms.yml
@@ -85,11 +85,11 @@ de:
           Gefühl.<br/> 
           Dusche und Toilette sind ensuite und zusätlich zum Doppelbett ist Platz für ein Extra-Bett.<br/>
           Der Preis für 2 ist 90€ / Einzelbelegung 75€
-  ametist:
-    short: Amethyst Zimmer
-    full: Das <b>Amethyst Zimmer</b> ist ein sonnig, helles Zimmer mit hand geschnitztem Relief. <br/>
+  saffron:
+    short: Saffron Suite
+    full: Die <b>Saffron Suite</b> ist ein sonnig, helles Zimmer mit hand geschnitztem Relief. <br/>
           Das Zimmer ist nach Süden gerichtet und durch die grossen Fenster entsteht eine sehr geraümiges 
           Gefühl.<br/>
           Eine eigene Dusche und Toilette geht direkt von der eigenen kleinen Eingangshalle ab. <br/>
-          Der Preis für 2 ist 85€ / Einzelbelegung 70€
+          Der Preis für 2 ist 90€ / Einzelbelegung 75€
   
