--- a/config/locales/en_rooms.yml
+++ b/config/locales/en_rooms.yml
@@ -89,15 +89,15 @@ en:
     full: The <b>Sun suite</b> is an elegant, sunny and spacious room. <br/>
           Traditional timberframing gives the room a rustic touch which counterpoints the elegant 
           interiour with beautiful teak furniture.<br/>
-          Facing south with large windows there is a sunny and light feeling in the room. Alsoit feels spacious 
+          Facing south with large windows there is a sunny and light feeling in the room. Also it feels spacious 
           as the ceilings are over 3m high.<br/> 
           Shower and toilet are ensuite. 
           There is a double bed and a space to fit two extra beds.<br/>
           The price for two is 90€/75€ single
-  ametist:
-    short: Amethyst room
-    full: The <b>Amethyst</b> room is a light and sunny room with handcarved relief. <br/>
-          The room has is south facing  with large windows and high ceiling that give it a spacious feel.<br/>
-          There is a private bathroom with shower and a double bed. One extra bed can be arranged. <br/>
-          The price for two is 85€/70€ single
+  saffron:
+    short: Saffron Suite
+    full: The <b>Saffron Suite</b> room is a sunny and elegant room with handcarved pillars. <br/>
+          The room is south facing  with large windows and high ceiling that give it a spacious feel.<br/>
+          There is a private bathroom with shower and a double bed. One or two extra beds can be arranged. <br/>
+          The price for two is 90€/75€ single
   
