--- a/config/locales/fi_rooms.yml
+++ b/config/locales/fi_rooms.yml
@@ -72,9 +72,11 @@ fi:
           Siellä on parisänky ja sinne mahtuu mukavasti kaksikin lisävuodetta. 
           Siinä on oma wc ja suihku.<br/>
           Hinta on 90€ /2hh ja 75€ /1hh
-  ametist:
-    short: Ametisti huone
-    full: <b>Ametisti huone </b>on valoisa ja kaunis huone. Huonetta koristaa käsinkaiverrettu reliefi ja uniikki käsinmaalattu kaappi. <br/> Siellä on parisänky ja sinne mahtuu tarvittaessa lisävuode.
+  saffron:
+    short: Saffron sviitti
+    full: <b>Saffron sviitti</b> on valoisa ja kaunis sviitti. 
+          Huonetta koristaa käsinkaiverretut pylväät, jotka tuovat itämaista tunnelmaa tyylikkääseen huoneeseen. <br/> 
+          Siellä on parisänky ja sinne mahtuu helposti lisävuode, tarvittaessa kaksikin.
           Huoneessa on oma wc ja suihku.<br/>
-           Hinta on 85€ /2hh ja 70€/ 1hh
+           Hinta on 90€ /2hh ja 75€/ 1hh
   
