--- a/config/locales/fi_rest.yml
+++ b/config/locales/fi_rest.yml
@@ -45,12 +45,12 @@ fi:
     short: Varaus
     received: Olemme vastaanottaneet varauksesi
     error: Voitko ystävällisesti täyttää kaikki kentät. Tarkista s-postiosoitteesi ja päivämäärä, kiitos.
-    booking: "Voit tehdä varauksen puhelimitse +358407046689 kello 10:00 ja 19:00 välillä, lähetä s-postia 
+    booking: "Voit tehdä varauksen puhelimitse (+358) 40 704 6689 kello 10:00 ja 19:00 välillä, lähetä s-postia 
                       tai käytä alla olevaa kaavaketta. <br/ ><br/ > 
-            Täytä kaikki kentät. Jos et halua varata tiettyä huonetta , 
-            voit käyttää eri huone kategorioita Sviitti/Deluxe/Standard . <br/> 
+            Täytä kaikki kentät. Jos et halua varata tiettyä huonetta, 
+            voit käyttää eri huonekategorioita Sviitti/Deluxe/Standard. <br/> 
             Kaikissa huoneissa on kaksoisvuode. Jos teitä on useampi tai haluatte erilliset vuoteet, 
-            lisää se huomio kenttään. <br/> "
+            lisää se huomiokenttään. <br/> "
     name: Koko nimesi
     email: Sähköposti osoitteesi
     arrival: saapumispäivä
