--- a/config/locales/en_rooms.yml
+++ b/config/locales/en_rooms.yml
@@ -14,15 +14,15 @@ en:
         nearby tourist sights.
         The Billnäs 15km, Mustio castle 15km, beautiful towns of Tammisaari 35 km and Hanko 65km
     two:
-        The room price is for two people, between 75 and 95€ , and extra beds cost 25€. <br/>
+        The room price is for two people, between 70 and 105€ , and extra beds cost 25€. <br/>
         The price includes breakfast served between 8:30-10:00, bed-linen and towels. <br/>  
         You can sign into your room between 14-19 . Please let us know what time
         you'll be arriving! <br/>
         Checkout by 12 o'clock. <br/>
         Stays of 2 or more nights require 25% downpayment.
-    suites: 3 suites with own shower 90-95 €
-    deluxe: 2 rooms with toilet ensuite 75€
-    standard: 2 rooms which share one shower 75€
+    suites: 3 suites with own shower 95/105€
+    deluxe: 2 rooms with toilet ensuite 80€
+    standard: 2 rooms which share one shower 80€
   tai: or
   puh: tel
   myos: See also
@@ -46,7 +46,7 @@ en:
         There is an en-suite wc, and it shares a shower with the next door Orange room.<br/>
         Orange and Green room together are a very good choice for small groups, or large families, as there is 
         also a small lounge for these two rooms. <br/>
-        The price for two is 75€ / Single 60€
+        The price for two is 80€ / Single 65€
   orange:
     short: Orange room
     full: The <b>Orange room</b>  has a warm and cosy atmosphere, with a bright feel to it.<br/>
@@ -55,7 +55,7 @@ en:
           From its second floor it has a beautiful view of the garden with its pond and surrounding nature. <br/>
           Orange and Green room together are a good choice for small groups, or large families, as there is 
           also a small lounge for these two rooms.<br/>
-          The price for two is 75€.
+          The price for two is 80€.
   rose:
     short: Rose room
     full: The <b>Rose room </b> is a cosy room with a romantic atmosphere. <br/>
@@ -63,7 +63,7 @@ en:
           It shares a toilet and shower with the next door Sky room. <br/>
           Together with the sky room it is an ideal choice for large families or small groups up to five, as 
           both rooms with their bathroom form an apartment.<br/>
-          The price for two is 75€/ Single 60€
+          The price for two is 80€/ Single 65€
   sky:
     short: Sky room
     full: The <b>Sky room </b> is a  charming  room with a peaceful atmosphere. <br/>
@@ -71,7 +71,7 @@ en:
            Together with the sky room it is an ideal choice for large families or small groups up to five, as 
            both rooms with their bathroom form an apartment.<br/>
            There is a double bed, and space for an extra bed on request. <br/>
-           The price for two is 75€/ Single 60€
+           The price for two is 80€/ Single 65€
   
   lootus:
     short: Lotus Suite
@@ -83,7 +83,7 @@ en:
             The suite is also very well suited for wedding couples. We offer a <b>wedding package</b> which includes 
             extra decoration with flowers and candles, and breakfeast can be served privately 
             to the room or terasse.<br/>
-            The room price for two is 95€. (Weddingpackage is 135€ for two)
+            The room price for two is 105€. (Weddingpackage is 150€)
   sun:
     short: Sun suite 
     full: The <b>Sun suite</b> is an elegant, sunny and spacious room. <br/>
@@ -93,11 +93,11 @@ en:
           as the ceilings are over 3m high.<br/> 
           Shower and toilet are ensuite. 
           There is a double bed and a space to fit two extra beds.<br/>
-          The price for two is 90€/75€ single
+          The price for two is 95€/80€ single
   saffron:
     short: Saffron Suite
     full: The <b>Saffron Suite</b> room is a sunny and elegant room with handcarved pillars. <br/>
           The room is south facing  with large windows and high ceiling that give it a spacious feel.<br/>
           There is a private bathroom with shower and a double bed. One or two extra beds can be arranged. <br/>
-          The price for two is 90€/75€ single
+          The price for two is 95€/80€ single
   
